# Collab_QRC

./: .gitignore  .gitmodules  CLAUDE.md  CLAUDE1.md  MUJOCO_LOG.TXT  README.md  TASK_FOR_DESKTOP_AGENT.md  TRAINING.md  env.sh  ros-humble-hardware-interface_2.53.1-1jammy.debian.tar.xz  ros-humble-hardware-interface_2.53.1-1jammy.dsc  setup.sh  todo.txt  vlm_demo.sh  vlm_demo_lrc.sh
jetson_ws/src/cfpa2_collaborative_autonomy/: CMakeLists.txt  package_ros1.xml
jetson_ws/src/cfpa2_collaborative_autonomy/cfpa2_collaborative_autonomy/: cfpa2_single_robot_node.py
jetson_ws/src/cfpa2_collaborative_autonomy/config/: cfpa2_single_robot_ops2_ros1.yaml  cfpa2_single_robot_ros1.yaml
jetson_ws/src/cfpa2_collaborative_autonomy/src/: cfpa2_coordinator.cpp  cfpa2_coordinator_node_main.cpp  cfpa2_single_robot.cpp  cfpa2_single_robot_node_main.cpp
jetson_ws/src/cfpa2_collaborative_autonomy/test/: test_frontier_cluster_representative.py  test_frontier_replan_blacklist.py  test_goal_satisfied_los.py  test_ramp_ascent_goal_gate.py
jetson_ws/src/elevation_mapping_cupy/: CMakeLists.txt
jetson_ws/src/hil_udp_relay/: CMakeLists.txt  package.xml
jetson_ws/src/hil_udp_relay/src/: hil_relay_rx_node.cpp  hil_relay_tx_node.cpp
jetson_ws/src/trav_pipeline_ros1/: CMakeLists.txt  package.xml
jetson_ws/src/trav_pipeline_ros1/config/: elevation_mapping_go2w.yaml
jetson_ws/src/trav_pipeline_ros1/launch/: trav_pipeline.launch
jetson_ws/src/trav_pipeline_ros1/scripts/: cfpa2_to_movebase_bridge.py
src/collaborative_exploration/cfpa2_collaborative_autonomy/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/collaborative_exploration/cfpa2_collaborative_autonomy/cfpa2_collaborative_autonomy/: __init__.py  cfpa2_coordinator_node.py  cfpa2_single_robot_node.py  cluster_tracker.py  frontier_3d.py  frontier_3d_test_node.py
src/collaborative_exploration/cfpa2_collaborative_autonomy/config/: cfpa2_coordinator.yaml  cfpa2_single_robot.yaml  cfpa2_single_robot.yaml.bak.2d  cfpa2_single_robot_3d.yaml  cfpa2_single_robot_demo_ramp.yaml  cfpa2_single_robot_ops2.yaml
src/collaborative_exploration/cfpa2_collaborative_autonomy/src/: cfpa2_coordinator.cpp  cfpa2_coordinator_node_main.cpp  cfpa2_grid_ops_c_api.cpp  cfpa2_single_robot.cpp  cfpa2_single_robot_node_main.cpp
src/collaborative_exploration/cfpa2_collaborative_autonomy/test/: test_frontier_cluster_representative.py  test_frontier_raw_overfetch.py  test_frontier_replan_blacklist.py  test_goal_distance_gate.py  test_goal_obstacle_clearance.py  test_pivot_lock_max_hold.py  test_ramp_ascent_goal_gate.py  test_single_robot_held_goal_safety.py
src/collaborative_exploration/cfpa2_peer_coordination/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/collaborative_exploration/cfpa2_peer_coordination/cfpa2_peer_coordination/: mdvrp_adapter.py  mdvrp_solver.py  peer_coordinator_node.py
src/collaborative_exploration/cfpa2_peer_coordination/src/: mdvrp_adapter.cpp  mdvrp_solver.cpp  peer_coordinator.cpp  peer_coordinator_node_main.cpp
src/collaborative_exploration/cfpa2_peer_coordination_msgs/: CMakeLists.txt  package.xml
src/collaborative_exploration/cfpa2_peer_coordination_msgs/msg/: ClaimedFrontier.msg  NegotiationRequest.msg  NegotiationResponse.msg  PeerState.msg
src/collaborative_exploration/door_task/: package.xml  setup.cfg  setup.py
src/collaborative_exploration/door_task/config/: door_task.yaml  scene.yaml
src/collaborative_exploration/door_task/door_task/: button_monitor_node.py  door_lock_from_button_node.py  door_monitor_node.py  vlm_controller_node.py
src/collaborative_exploration/door_task/tests/: test_actions.py  test_control.py  test_geometry.py  test_inspector_pool.py  test_memory.py  test_parser.py  test_projection.py  test_tracker.py  test_world_dict.py  test_world_dict_semantic.py
src/collaborative_exploration/dynamic_scene_filter/: package.xml  setup.py
src/collaborative_exploration/dynamic_scene_filter/config/: dynamic_filter.yaml
src/collaborative_exploration/dynamic_scene_filter/dynamic_scene_filter/: __init__.py  dynamic_obstacle_filter_node.py  dynamic_obstacle_injector_node.py  dynamic_voxel_decay_map_node.py  temporal_voxel_filter.py
src/collaborative_exploration/dynamic_scene_filter/resource/: dynamic_scene_filter
src/collaborative_exploration/dynamic_scene_filter/test/: test_dynamic_voxel_filter.py
src/collaborative_exploration/go2_tare_planner_ros2/: CMakeLists.txt  README.md  package.xml
src/collaborative_exploration/nvblox_frontend/: CMakeLists.txt  package.xml
src/collaborative_exploration/nvblox_frontend_msgs/: CMakeLists.txt  package.xml
src/collaborative_exploration/slam_backend_adapters/: package.xml  setup.cfg  setup.py
src/collaborative_exploration/trav_cost_filters/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/exploration/go2_nav_algorithms/: CMakeLists.txt  package.xml
src/go2w/go2_gazebo_sim/: CMakeLists.txt  README.md  package.xml
src/go2w/go2w_config/: CMakeLists.txt  package.xml
src/livox_ros_driver2_msgs/: package.xml
src/nav2_mppi_controller_cuda_plugin/: CMakeLists.txt  mppic_cuda.xml  package.xml
src/nav2_mppi_controller_cuda_plugin/src/: cuda_mppi_controller.cpp
src/vlm_explorer/: package.xml  setup.cfg  setup.py
src/vlm_explorer/config/: cartographer_sim_2d.lua  cartographer_sim_3d.lua  vlm_explorer.yaml
src/vlm_explorer/launch/: dual_vlm_gazebo.launch.py  single_vlm_gazebo.launch.py  single_vlm_gazebo_far.launch.py  single_vlm_mujoco_far.launch.py
src/vlm_explorer/rviz/: single_vlm_gazebo.rviz  single_vlm_gazebo_far.rviz  single_vlm_mujoco.rviz
src/vlm_explorer/scripts/: vlm_history_viewer.py
src/vlm_explorer/vlm_explorer/: artifact_detector_node.py  artifact_scorer_node.py  florence2_detector_node.py  green_marker_detector_node.py  interaction_tool_node.py  map_renderer_node.py  prompting.py  red_block_detector_node.py  skeleton_extractor_node.py  vlm_backends.py  vlm_coordinator_node.py  yolo_detector_node.py
src/vlm_explorer/worlds/: vlm_exploration.world  vlm_exploration.xml  vlm_exploration_scene.xml
(+800 files in other folders)
