<?xml version="1.0"?>
<package format="3">
  <name>livox_ros_driver2</name>
  <version>2.0.0</version>
  <description>Livox ROS2 driver message definitions (msgs-only stub, no SDK required)</description>
  <maintainer email="stub@stub.com">stub</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
