<?xml version="1.0"?>
<package format="3">
  <name>vlm_explorer</name>
  <version>0.1.0</version>
  <description>VLM-in-the-loop dual-robot exploration: skeleton extraction, map rendering, VLM coordination, green marker detection.</description>
  <maintainer email="hz@example.com">hz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
