<?xml version="1.0"?>
<package format="3">
  <name>cfpa2_collaborative_autonomy</name>
  <version>0.1.0</version>
  <description>ROS2 CFPA2 coordinator node for dual-robot frontier assignment with space-time A* local waypointing.</description>
  <maintainer email="hz@example.com">hz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nvblox_frontend_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
