<?xml version="1.0"?>
<package format="3">
  <name>cfpa2_peer_coordination</name>
  <version>0.2.0</version>
  <description>
    Decentralised peer coordination for CFPA2 multi-robot exploration:
    per-robot PeerState heartbeats, negotiated frontier ownership via
    NegotiationRequest/Response, and a blocked-frontier feed for the
    local CFPA2 planner. Negotiation uses an MDVRP solver to propose
    a joint allocation; commits happen only on negotiated accept.
 
    Phase-A Python implementation (cfpa2_peer_coordination/) remains
    runnable as a fallback while the rclcpp port (peer_coordinator_node_cpp)
    is being validated on the Jetson.
  </description>
  <maintainer email="zcabyl3@ucl.ac.uk">Emily Lau</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ runtime -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cfpa2_peer_coordination_msgs</depend>
 
  <!-- Python runtime (existing fallback) -->
  <exec_depend>rclpy</exec_depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>