<?xml version="1.0"?>
<package format="3">
  <name>cfpa2_peer_coordination_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for decentralised peer-to-peer frontier negotiation between Go2 robots.</description>
  <maintainer email="zcabyl3@ucl.ac.uk">Emily Lau</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!--member_of_group is the bit that tells colcon "this package contributes message types to the system." Forget it and the generated bindings won't be importable from Python.-->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>