<?xml version="1.0"?>
<package format="3">
  <name>door_task</name>
  <version>0.1.0</version>
  <description>Phase 2 door wedge and pass-through task: FSM executor, skill primitives, VLM coordinator, and formal validation.</description>
  <maintainer email="hz@example.com">hz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
