<?xml version="1.0"?>
<package format="3">
  <name>dynamic_scene_filter</name>
  <version>0.1.0</version>
  <description>Temporal voxel dynamic object filtering for LiDAR team-SLAM.</description>
  <maintainer email="ylhc@example.com">ylhc</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
